[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/rovers/RoverActions.gd" type="Script" id=1]

[node name="RoverActions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 113.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 173.0
margin_bottom = 27.0

[node name="Load" type="Button" parent="PanelContainer/HBoxContainer"]
margin_right = 42.0
margin_bottom = 20.0
text = "Load"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 46.0
margin_right = 50.0
margin_bottom = 20.0

[node name="Unload" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 111.0
margin_bottom = 20.0
text = "Unload"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/HBoxContainer"]
margin_left = 115.0
margin_right = 119.0
margin_bottom = 20.0

[node name="Base" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 123.0
margin_right = 166.0
margin_bottom = 20.0
text = "Base"
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_PanelContainer_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_PanelContainer_mouse_exited"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/Load" to="." method="_on_Load_button_up"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/Load" to="." method="_on_Load_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/Load" to="." method="_on_Load_mouse_exited"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/Unload" to="." method="_on_Unload_button_up"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/Unload" to="." method="_on_Unload_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/Unload" to="." method="_on_Unload_mouse_exited"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/Base" to="." method="_on_Base_button_up"]
[connection signal="mouse_entered" from="PanelContainer/HBoxContainer/Base" to="." method="_on_Base_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/HBoxContainer/Base" to="." method="_on_Base_mouse_exited"]
